--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -164,6 +164,10 @@ $border-thin: 1px solid $color-mid-light !default;
   flex-direction: row-reverse;
 }
 
+.u-no-border {
+  border: none !important;
+}
+
 .item-name {
   overflow-wrap: anywhere;
 }
